version 2.x.x - Griffin Chapel ()
    + Added TIMEZONE as a new config setting. Please update your config.
      See update.txt for more details.
    + Better logging
    + New home screen layout

version 2.8.2 - Dragon Chapel (2023-09-14)

    + Added LOGFILE and QUERY_DEBUG const to config.php. See update.txt for more details
    + Updated DB table charsets. Needs manual DB updates. See update.txt file.
    + Fixed URL handling at creation
    + Improved DB queries.
    + Add top 5 tag or category relation stats in the tag and category overview
    + Updated license to GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007
    + Updated error logging and try/catch for mysql
    + Updated from https://github.com/druidfi/mysqldump-php to https://github.com/ifsnop/mysqldump-php since develop
      resumed. Version mysqldump-php v2.11
    + Updated https://github.com/mikehaertl/php-shellcommand to 1.7.0

version 2.8.1 - Deathwind Chapel (2022-12-31)

    + Bugfix release
    + Moved debug setting into config
    + Updated shellcommand class and added the link to the github repo
    + Fixed/Updated the creation of the webpage thumbnail using google pagespeed insights api
    + Fixed search index update
    + Fixed missing lang property
    + Fixed xml ex- and import
    + Fixed pagination and sort options in all links view
    + Mysql dump replaced with https://github.com/druidfi/mysqldump-php
    + Updated PHPMailer
    + Removed WKHTMLTOPDF_USE and WKHTMLTOPDF_COMMAND from config. No support for a whole page screenshot yet.

version 2.8 - Wastelands (2022-12-10)

    + Fixed documentation
    + Fixed some PHP 8 defaults
    + Fixed #17

version 2.7 - Sacred Grove (2022-06-12)

    + Fixed bug #12. Missing translation key
    + Adapted some new PHP code formatting
    + Fixed some translations
    + Updated bulma css
    + Added random link page
    + New syntax in config file. See update.txt for more details
    + Fixed #13
    + Fixed #15
    + Fixed #14