@@ -1,6 +1,7 @@
 version 2.x.x - Griffin Chapel ()
     + Added TIMEZONE as a new config setting. Please update your config.
       See update.txt for more details.
+    + Snapshot json result from Google changed. Fixed.
     + Better logging
     + New home screen layout
 
